--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.15.8
   http: ^0.12.0+2
+  transparent_image: 1.0.0
+  cached_network_image: 1.1.1
 
 dev_dependencies:
   flutter_test:
